@@ -75,6 +75,7 @@ void PrefPerformance::setData(Preferences * pref) {
 	setCacheForFiles( pref->cache_for_files );
 	setCacheForStreams( pref->cache_for_streams );
 	setCacheForDVDs( pref->cache_for_dvds );
+	setCacheForAudioCDs( pref->cache_for_audiocds );
 
 	setPriority( pref->priority );
 	setFrameDrop( pref->frame_drop );
@@ -95,6 +96,7 @@ void PrefPerformance::getData(Preferences * pref) {
 	TEST_AND_SET(pref->cache_for_files, cacheForFiles());
 	TEST_AND_SET(pref->cache_for_streams, cacheForStreams());
 	TEST_AND_SET(pref->cache_for_dvds, cacheForDVDs());
+	TEST_AND_SET(pref->cache_for_audiocds, cacheForAudioCDs());
 
 	TEST_AND_SET(pref->priority, priority());
 	TEST_AND_SET(pref->frame_drop, frameDrop());
@@ -133,6 +135,13 @@ int PrefPerformance::cacheForDVDs() {
 	return cache_dvds_spin->value();
 }
 
+void PrefPerformance::setCacheForAudioCDs(int n) {
+	cache_cds_spin->setValue(n);
+}
+
+int PrefPerformance::cacheForAudioCDs() {
+	return cache_cds_spin->value();
+}
 
 void PrefPerformance::setPriority(int n) {
 	priority_combo->setCurrentIndex(n);
@@ -284,6 +293,10 @@ void PrefPerformance::createHelp() {
 		tr("This option specifies how much memory (in kBytes) to use when "
            "precaching a DVD.<br><b>Warning:</b> Seeking might not work "
            "properly (including chapter switching) when using a cache for DVDs.") );
+
+	setWhatsThis(cache_cds_spin, tr("Cache for audio CDs"), 
+		tr("This option specifies how much memory (in kBytes) to use when "
+           "precaching an audio CD.") );
 }
 
 #include "moc_prefperformance.cpp"
